Example/6 - Configure Grafana/app/gateway-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
        name: app-gateway
        namespace: app
spec:
        selector:
                istio: ingressgateway
                # app: frontend
        servers:
        - port:
                number: 80 #5000
                name: http #tcp
                protocol: HTTP #TCP
          hosts:
          - "*"
