Example/6 - Configure Grafana/app/virtual-service-http.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
        name: app-virtualservice
        namespace: app
spec:
        hosts:
        - "*" #frontend-svc.app.svc.cluster.local
        gateways:
        - app/app-gateway
        http: #tcp:
        #- match:
        #  - port: 5000
        - route:
          - destination:
              host: frontend-svc.app.svc.cluster.local 
         #     port:
         #       number: 5000
